# wasm-physics

./: Cargo.toml  build.sh
frontend/: index.html  main.js  style.css
src/: body.rs  color.rs  lib.rs  vector2.rs
