[package]
name = "webapi-wasm"
version = "0.1.0"
authors = ["Rishit Khandelwal <rishitkh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.51"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }


[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  "HtmlCanvasElement",
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
